# kedro-whisper-dataset

./: README.md  pyproject.toml  requirements.txt  session_store.db
conf/base/: catalog.yml  parameters.yml
src/whisper_dataset/: __init__.py  __main__.py  entities.py  pipeline_registry.py
src/whisper_dataset/datasets/: whisper_dataset.py
src/whisper_dataset/nodes/feature/: sentiment_analysis.py
src/whisper_dataset/pipelines/: pipeline.py
